welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:9: error: ';' expected but 'else' found.
			else if(estFaceMur()){
                        ^SnakeBuggle:20: error: ';' expected but 'else' found.
			else if(estFaceMur()){
                        ^