welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	def estPositionFinale():Boolean={
		if(!estFaceMur()){
			return false
		}else{
		if(getDirection() == Direction.EST){
			gauche();
			else if(estFaceMur()){
				return true;
			}else{
				avance();
				gauche();
				return false;
			}
		}
	else{
		if(getDirection() == Direction.OUEST){
			droite();
			else if(estFaceMur()){
				return true;
			}else{
				avance();
				droite();
				return false;
			}
		}
	}
		}
	}
baisseBrosse();
while(estPositionFinale() == false){
	avance();
}
}
